
syntax = "proto3";
option java_package = "com.bdlepla.android.mymusicplayer";
option java_outer_classname = "CurrentListProto";
option java_multiple_files = true;

message MyMusicPlayerSettings {
  int64 PlayingSongId = 1;
  int64 PlayingPosition = 2; // in milliseconds
  repeated int64 CurrentListIds = 3; // the list of item Ids in the order to play
}